--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <h2>Panneau d'Administration</h2>
     <div class="section">
       <h3 class="section-title">Analyse des Activités Suspectes</h3>
-      <p>Utilisez l'IA Gemini pour analyser les logs d'activités suspectes et détecter les comportements anormaux.</p>
+      <p>Utilisez l'IA TAVNO-AI pour analyser les logs d'activités suspectes et détecter les comportements anormaux.</p>
       <div class="form-actions">
         <button id="analyzeLogsBtn" class="primary">Lancer l'analyse</button>
       </div>
@@ -99,7 +99,7 @@
         <div class="explore-header">
           <div class="search-wrapper">
             <input id="searchInput" placeholder="Chercher une quête...">
-            <button id="aiSearchBtn" class="ai-search-btn" title="Recherche IA Gemini">✨ IA</button>
+            <button id="aiSearchBtn" class="ai-search-btn" title="Recherche IA">✨ IA</button>
           </div>
           <select id="categorySelect">
             <option value="">Toutes catégories</option>
